ClusteripExerciseTwo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-two-dep
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world-two
  template:
    metadata:
      labels:
        app: hello-world-two
    spec:
      containers:
      - name: hello-world-two-pod
        image: ingjavierr/microservicio-one:v1
        ports:
        - containerPort: 8090
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world-svc-two
spec:
  type: ClusterIP
  selector:
    app: hello-world-two
  ports:
  - port: 4243
    protocol: TCP
    targetPort: 8090
