ConfigMapUsing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secret-env-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: secret-env-pod
  template:
    metadata:
      labels:
        app: secret-env-pod
    spec:
      containers:
      - name: secret-env-container
        image: ingjavierr/microservicio-one:v1
        ports:
        - containerPort: 8090
---
apiVersion: v1
kind: Service
metadata:
  name: secret-env-svc
spec:
  selector:
    app: secret-env-pod
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8090
