EnvironmentVariablesTwo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: env-exe-two-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: env-exe-two-pod
  template:
    metadata:
      labels:
        app: env-exe-two-pod
    spec:
      containers:
      - name: env-exe-two-container
        image: ingjavierr/microservicio-one:v1
        ports:
        - containerPort: 8090
---
apiVersion: v1
kind: Service
metadata:
  name: env-exe-two-svc
spec:
  selector:
    app: env-exe-two-pod
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8090
