ExerciseOne.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-dep
spec:
  replicas: 6
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: hello-world-pod
        image: ingjavierr/microservicio-hub:V2
        ports:
        - containerPort: 8090
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world
spec:
  selector:
    app: hello-world
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8090
