ExerciseTwo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-dep
spec:
  replicas: 5
  minReadySeconds: 15
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: hello-world-pod
        image: ingjavierr/microservicio-hub:V2
        ports:
        - containerPort: 8090
        readinessProbe: 
            httpGet: 
              path: /microservicio/ping
              port: 8090
            initialDelaySeconds: 10
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world
spec:
  selector:
    app: hello-world
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8090
  type: LoadBalancer
