LoadBalancerExercise.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: hello-world-pod
        image: ingjavierr/microservicio-one:v1
        ports:
        - containerPort: 8090
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world-svc
spec:
  type: LoadBalancer
  selector:
    app: hello-world
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8090
