MultipleServiceIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-multiple
spec:
  ingressClassName: nginx
  rules:
  - http: 
      paths: 
      - path: /red
        pathType: Prefix
        backend: 
          service:
            name: hello-world-svc
            port:
              number: 80
      - path: /blue
        pathType: Prefix
        backend: 
          service:
            name: hello-world-svc-two
            port:
              number: 4243
